✨ feat: adding json local database

--- a/hogwarts-houses-api/hogwarts-houses-api.csproj
+++ b/hogwarts-houses-api/hogwarts-houses-api.csproj
@@ -8,12 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JsonFlatFileDataStore" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Repositories\Interfaces\" />
   </ItemGroup>
 
 </Project>
